--- a/public/test.html
+++ b/public/test.html
@@ -1,333 +1,53 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <title>时间轴（匿名模式）</title>
-  <!-- 引入所需样式和库 -->
+  <meta charset="UTF-8" />
+  <title>时间轴（查看模式）</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
   <style>
-    #timeline { width: 100%; height: 800px; border: 1px solid lightgray; position: relative; }
+    #timeline { width: 100%; height: 720px; border: 1px solid #ddd; }
     .vis-tooltip {
-      white-space: normal !important; max-width: 700px !important; min-width: 300px;
-      font-size: 10px; line-height: 1.2; padding: 12px; background-color: #fff;
-      border: 1px solid #ccc; box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+      white-space: normal !important;
+      max-width: 720px !important;
+      font-size: 12px; line-height: 1.4;
+      background: #fff; border: 1px solid #ccc; padding: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,.15);
     }
-    .vis-item {
-      font-size: 10px; padding: 1px 2px; background-color: #f5f5f5;
-      border: 1px solid #aaa; border-radius: 4px; max-width: 300px;
-    }
-    #event-form, #filter-window, #add-filter-window {
-      position: absolute; top: 20px; left: 50%; transform: translateX(-50%);
-      background: #fff; padding: 20px; border: 1px solid #ccc;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3); display: none;
-      z-index: 2000; max-height: 80vh; overflow: auto;
-    }
-    #add-filter-window { width: 700px; height: 300px; }
-    #filter-window { width: 700px; }
+    .vis-item { font-size: 12px; }
   </style>
 </head>
 <body>
-  <h2>匿名时间轴编辑器（只读预览）</h2>
-  <!-- 功能按钮 -->
-  <button onclick="openAddEventForm()">➕ 增加事件</button>
-  <button onclick="openFilterWindow('and')">🔍 过滤标准</button>
+  <h2>时间轴（查看模式）</h2>
   <div id="timeline"></div>
 
-  <!-- 新增事件表单 -->
-  <div id="event-form">
-    <h3>新增事件</h3>
-    <label>事件名称（必填）：<input type="text" id="title"></label><br>
-    <label>事件类型（必填）：<select id="eventType"></select></label><br>
-    <label>开始时间（必填）：<input type="date" id="start"></label><br>
-    <label>结束时间：<input type="date" id="end"></label><br>
-    <label>地区（必填）：<select id="region"></select></label><br>
-    <label>平台类型：<select id="platform"></select></label><br>
-    <label id="consoleLabel" style="display:none">主机类型：<select id="console"></select></label><br>
-    <label>公司：<select id="company"></select></label><br>
-    <label>描述：<br><textarea id="description" rows="4" cols="40"></textarea></label><br>
-    <label>标签（多选）：<select id="tag" multiple></select></label><br>
-    <label>提交者昵称（选填）：<input type="text" id="submitter" maxlength="12" pattern="[\u4e00-\u9fa5\w]{0,12}" title="仅限中文、英文、数字，最多12字节"></label><br>
-    <button onclick="submitEvent()">提交</button>
-    <button onclick="document.getElementById('event-form').style.display='none'">关闭</button>
-  </div>
-
-<!-- 过滤逻辑设置弹窗 -->
-  <div id="filter-window">
-    <h3>过滤标准（和逻辑）</h3>
-    <button onclick="openAddFilter()">增加过滤标准</button>
-    <button onclick="resetFilters()">复原过滤标准</button>
-    <button onclick="applyFilters()">应用和逻辑</button>
-    <button onclick="applyFiltersOr()">应用或逻辑</button>
-    <button onclick="document.getElementById('filter-window').style.display='none'">关闭</button>
-    <div id="current-filters"></div>
-  </div>
-
-  <!-- 添加过滤标准弹窗 -->
-  <div id="add-filter-window">
-    <h3>新增过滤标准</h3>
-    <label>过滤属性：<select id="filter-attribute"></select></label><br>
-    <label>过滤选项：<select id="filter-options" multiple></select></label><br>
-    <button onclick="confirmAddFilter()">确定</button>
-    <button onclick="document.getElementById('add-filter-window').style.display='none'">取消</button>
-  </div>
-
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec";
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbxe-P-iT8Jv8xSNTqdYB7SMi4sy2pPl8lLZ2EWqaXsP-jz6nfsxdJ1a0lzNSGB-e_1U/exec";
 
-let allOptions = {}, activeFilters = {}, filterOptionsChoices, filterLogic = 'and';
-let originalItems = [], timeline = null;
+moment.locale("zh-cn");
 
-const attributeLabels = {
-  EventType: "事件类型",
-  Region: "地区",
-  Platform: "平台类型",
-  Company: "公司",
-  Status: "状态",
-  ConsolePlatform: "主机类型"
-};
+// 小工具：把 \n 换成 <br> 用于悬停
+function nl2br(s) { return (s || '').toString().replace(/\n/g, '<br>'); }
 
-function openAddEventForm() {
-  document.getElementById('event-form').style.display = 'block';
-  document.getElementById('platform')?.dispatchEvent(new Event('change'));
-}
-
-function openFilterWindow(logic) {
-  filterLogic = logic;
-  document.getElementById('filter-window').style.display = 'block';
-}
-
-function resetFilters() {
-  activeFilters = {};
-  updateFilterList();
-  updateTimelineByFilter();
-}
-
-function updateFilterList() {
-  const div = document.getElementById("current-filters");
-  div.innerHTML = '';
-  for (const [key, values] of Object.entries(activeFilters)) {
-    const d = document.createElement("div");
-    d.textContent = ${attributeLabels[key] || key}: ${values.join(', ')};
-    const btn = document.createElement("button");
-    btn.textContent = '❌';
-    btn.onclick = () => { delete activeFilters[key]; updateFilterList(); updateTimelineByFilter(); };
-    d.appendChild(btn);
-    div.appendChild(d);
-  }
-}
-
-function openAddFilter() {
-  document.getElementById("add-filter-window").style.display = 'block';
-  const attrSel = document.getElementById("filter-attribute");
-  attrSel.innerHTML = '';
-  Object.keys(attributeLabels).forEach(key => {
-    const o = document.createElement("option");
-    o.value = key;
-    o.textContent = attributeLabels[key];
-    attrSel.appendChild(o);
-  });
-attrSel.onchange = () => {
-  const key = attrSel.value;
-  const opts = getFilterOptionsForKey(key);   // ✅ 统一拿到数组
-  const sel = document.getElementById("filter-options");
-  sel.innerHTML = '';
-  opts.forEach(opt => {
-    const o = document.createElement("option");
-    o.value = o.textContent = opt;
-    sel.appendChild(o);
-  });
-  if (filterOptionsChoices) filterOptionsChoices.destroy();
-  filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
-};
-  attrSel.dispatchEvent(new Event("change"));
-}
-
-function confirmAddFilter() {
-  const attr = document.getElementById("filter-attribute").value;
-  const selected = Array.from(document.getElementById("filter-options").selectedOptions).map(o => o.value);
-  if (attr && selected.length) {
-    activeFilters[attr] = selected;
-    updateFilterList();
-  }
-  document.getElementById("add-filter-window").style.display = 'none';
-}
-
-function normalizeToArray(raw) {
-  if (Array.isArray(raw)) return raw;
-  if (typeof raw === 'string') return [raw];
-  if (raw && typeof raw === 'object') {
-    // 例如 ConsolePlatform 是 { 平台A: [...], 平台B: [...] }
-    try { return Object.values(raw).flat().filter(Boolean); } catch (e) {
-      // .flat 不可用的极端环境：
-      var out = [];
-      Object.keys(raw).forEach(k => {
-        var v = raw[k];
-        if (Array.isArray(v)) out = out.concat(v);
-        else if (v) out.push(v);
-      });
-      return out;
-    }
-  }
-  return [];
-}
-
-// 根据选择的过滤属性，返回对应的候选数组（已归一）
-function getFilterOptionsForKey(key) {
-  if (key === 'ConsolePlatform') {
-    // 优先使用专门的 ConsolePlatformFilter（数组）
-    if (Array.isArray(allOptions.ConsolePlatformFilter)) {
-      return allOptions.ConsolePlatformFilter;
-    }
-    // 兜底：从 ConsolePlatform 映射里把所有主机类型打平为数组
-    if (allOptions.ConsolePlatform) {
-      return normalizeToArray(allOptions.ConsolePlatform);
-    }
-  }
-  return normalizeToArray(allOptions[key]);
-}
-  
-/* -------- 通用过滤判断（支持 6 个属性） -------- */
-function valueInSelected(val, selectedArr) {
-  if (val == null) return false;
-  const vArr = Array.isArray(val) ? val : [val];
-  return vArr.some(v => selectedArr.includes(String(v)));
-}
-function passesAndLogicFilters(item, filters) {
-  return Object.entries(filters).every(([key, values]) => valueInSelected(item[key], values));
-}
-function passesOrLogicFilters(item, filters) {
-  return Object.entries(filters).some(([key, values]) => valueInSelected(item[key], values));
-}
-function updateTimelineByFilter() {
-  if (!timeline || !originalItems) return;
-
-  console.groupCollapsed('🧪DEBUG: 过滤执行');
-  console.log('filterLogic:', filterLogic);
-  console.log('activeFilters:', JSON.stringify(activeFilters));
-  console.log('原始事件数量:', originalItems.length);
-
-  const hasFilters = Object.keys(activeFilters).length > 0;
-  const filtered = hasFilters
-    ? originalItems.filter(item => {
-        const pass = (filterLogic === 'and')
-          ? Object.entries(activeFilters).every(([k, vals]) => vals.includes(String(item[k] ?? '')))
-          : Object.entries(activeFilters).some(([k, vals]) => vals.includes(String(item[k] ?? '')));
-
-        // 对前 50 条或全部进行打印（可按需调整）
-        console.debug('条目判定:', {
-          id: item.id,
-          content: item.content,
-          EventType: item.EventType,
-          Region: item.Region,
-          Platform: item.Platform,
-          Company: item.Company,
-          Status: item.Status,
-          ConsolePlatform: item.ConsolePlatform,
-          通过: pass
-        });
-        return pass;
-      })
-    : originalItems;
-
-  console.log('通过过滤的事件数量:', filtered.length);
-  console.groupEnd();
-
-  timeline.setItems(filtered);
-}
-
-function applyFilters() { filterLogic = 'and'; updateTimelineByFilter(); }
-function applyFiltersOr() { filterLogic = 'or'; updateTimelineByFilter(); }
-
-/* -------- 获取事件并渲染（关键替换区） -------- */
 fetch(ENDPOINT)
-  .then(res => res.json())
+  .then(r => r.json())
   .then(data => {
-    originalItems = data.map((event, i) => {
-  // 1) 简介文本：优先后端的 event.content，其次 Title，最后占位
-  const contentText = event.content ?? event.Title ?? '(无标题)';
+    // data 来自 TimelineApproved 的 getTimelineData()
+    // 其中 content=Title（用于时间轴短标题），title 为悬停长内容（包含“贡献者”）
+    console.log("Viewer events sample:", data[0]); // 调试：看一眼返回结构
 
-  // 2) 时间
-  const Start = event.Start ?? event.start ?? '';
-  const End   = event.End   ?? event.end   ?? '';
+    const items = data.map((ev, i) => ({
+      id: ev.id || `auto-${i+1}`,
+      content: ev.content || '(无标题)',      // 时间轴上的短标题（Title）
+      start: ev.start,                        // 必填：开始日期 yyyy-MM-dd
+      end: ev.end || undefined,               // 可能为空
+      title: nl2br(ev.title || '')            // 悬停框内容：换行成 <br>
+    }));
 
-  // 3) 如果后端提供了整块说明(event.title)，先准备一份纯文本
-  const blob = (event.title ?? '').toString();
-
-  // 4) 小工具：从整块说明中提取“标签：值”
-  const pick = (label) => {
-    if (!blob) return '';
-    const m = new RegExp(label + '：([^\\n]+)').exec(blob);
-    return m ? m[1].trim() : '';
-  };
-
-  // 5) 结构化字段（优先用后端字段；没有就从整块里抽取）
-  const EventType       = event.EventType       ?? event.eventType       ?? pick('事件类型');
-  const Region          = event.Region          ?? event.region          ?? pick('地区');
-  const Platform        = event.Platform        ?? event.platform        ?? pick('平台类型');
-  const Company         = event.Company         ?? event.company         ?? pick('公司');
-  const Status          = event.Status          ?? event.status          ?? pick('状态');
-  const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? pick('主机类型');
-
-  // 6) 悬停 HTML：若后端已给整块(title)，只做换行；否则按字段拼
-  let tooltipHtml;
-  if (blob) {
-    tooltipHtml = blob.replace(/\n/g, '<br>');
-  } else {
-    tooltipHtml = [
-      事件名称：${contentText},
-      事件类型：${EventType || ''},
-      时间：${Start || ''}${End ? ' ~ ' + End : ''},
-      状态：${Status || ''},
-      地区：${Region || ''},
-      平台类型：${Platform || ''},
-      主机类型：${ConsolePlatform || ''},
-      公司：${Company || ''}
-    ].join('<br>');
-  }
-
-  // 7) 调试：前 3 条打印看一下（你也可以保留你之前的 groupCollapsed）
-  if (i < 3) {
-    console.groupCollapsed(🧪MAP #${i});
-    console.log('原始 event：', event);
-    console.log('contentText(简介)：', contentText);
-    console.log('提取字段：', { EventType, Region, Platform, Company, Status, ConsolePlatform });
-    console.log('tooltipHtml：', tooltipHtml);
-    console.groupEnd();
-  }
-
-  // 8) 返回给 timeline & 过滤
-  return {
-    id: event.id || auto-${i + 1},
-    content: contentText,    // ✅ 简介只显示标题
-    start: Start,            // ✅ 时间轴关键字段
-    end: End || undefined,
-    title: tooltipHtml,      // ✅ 悬停完整说明（含 <br>）
-    EventType,
-    Region,
-    Platform,
-    Company,
-    Status,
-    ConsolePlatform
-  };
-});
-
-    // ④ 映射完成后，再打印一个对比总览
-console.groupCollapsed('🧪DEBUG: 映射后条目快照');
-console.log('映射后示例 originalItems[0]:', originalItems?.[0]);
-console.log('映射后条目的键:', Object.keys(originalItems?.[0] || {}));
-console.table((originalItems || []).slice(0, 5).map(x => ({
-  id: x.id, content: x.content, start: x.start, end: x.end,
-  EventType: x.EventType, Region: x.Region, Platform: x.Platform,
-  Company: x.Company, Status: x.Status, ConsolePlatform: x.ConsolePlatform
-})));
-console.groupEnd();
-
-    timeline = new vis.Timeline(document.getElementById("timeline"), originalItems, {
+    const container = document.getElementById("timeline");
+    const timeline = new vis.Timeline(container, items, {
       locale: "zh-cn",
       editable: false,
       margin: { item: 10, axis: 50 },
@@ -337,95 +57,11 @@ console.groupEnd();
       zoomKey: "ctrlKey",
       stack: true
     });
+  })
+  .catch(err => {
+    console.error("加载时间轴数据失败：", err);
+    alert("加载失败，请检查接口可用性（Console 查看详情）");
   });
-
-/* -------- 获取下拉选项 -------- */
-fetch(ENDPOINT + '?action=options')
-  .then(res => res.json())
-  .then(options => {
-    allOptions = options;
-    const fill = (id, list) => {
-      const select = document.getElementById(id);
-      select.innerHTML = '';
-      (list || []).forEach(opt => {
-        const o = document.createElement('option');
-        o.value = o.textContent = opt;
-        select.appendChild(o);
-      });
-    };
-    fill("eventType", options.EventType);
-    fill("region", options.Region);
-    fill("platform", options.Platform);
-    fill("company", options.Company);
-    fill("tag", options.Tag);
-    new Choices('#tag', { removeItemButton: true });
-
-    document.getElementById("platform").addEventListener("change", function () {
-      const val = this.value;
-      const consoles = options.ConsolePlatform?.[val] || [];
-      const select = document.getElementById("console");
-      select.innerHTML = '';
-      if (consoles.length) {
-        document.getElementById("consoleLabel").style.display = 'inline';
-        consoles.forEach(c => {
-          const o = document.createElement("option");
-          o.value = o.textContent = c;
-          select.appendChild(o);
-        });
-      } else {
-        document.getElementById("consoleLabel").style.display = 'none';
-      }
-    });
-
-    // 初始化“新增过滤标准”的属性下拉
-    const attrSel = document.getElementById("filter-attribute");
-    attrSel.innerHTML = '';
-    Object.keys(attributeLabels).forEach(key => {
-      const o = document.createElement("option");
-      o.value = key;
-      o.textContent = attributeLabels[key];
-      attrSel.appendChild(o);
-    });
-attrSel.addEventListener("change", () => {
-  const key = attrSel.value;
-  const opts = getFilterOptionsForKey(key);  // ✅ 统一拿到数组
-  const sel = document.getElementById("filter-options");
-  sel.innerHTML = '';
-  opts.forEach(opt => {
-    const o = document.createElement("option");
-    o.value = o.textContent = opt;
-    sel.appendChild(o);
-  });
-  if (filterOptionsChoices) filterOptionsChoices.destroy();
-  filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
-});
-    attrSel.dispatchEvent(new Event("change"));
-  });
-
-/* -------- 提交事件 -------- */
-function submitEvent() {
-  const tagList = Array.from(document.querySelector('#tag').selectedOptions).map(o => o.value);
-  const fd = new FormData();
-  fd.append("Title", title.value);
-  fd.append("Start", start.value);
-  fd.append("End", end.value);
-  fd.append("Region", region.value);
-  fd.append("Platform", platform.value);
-  fd.append("ConsolePlatform", document.getElementById("console").value);
-  fd.append("EventType", eventType.value);
-  fd.append("Company", company.value);
-  fd.append("Description", description.value);
-  fd.append("Submitter", submitter.value);
-  fd.append("Tag", tagList.join(","));
-
-  fetch(ENDPOINT, { method: "POST", body: fd })
-    .then(r => r.json())
-    .then(res => {
-      alert(res.message || "提交成功");
-      location.reload();
-    })
-    .catch(() => alert("提交失败，请检查网络"));
-}
 </script>
 </body>
 </html>
